--- a/.devops/disaster-recovery.yml
+++ b/.devops/disaster-recovery.yml
@@ -53,7 +53,7 @@ resources:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: refs/tags/6.2.0
+      ref: refs/tags/v6.2.0
       endpoint: "io-azure-devops-github-ro"
 
 
