--- a/src/core-itn-secrets/secret/itn-dev/secret.ini
+++ b/src/core-itn-secrets/secret/itn-dev/secret.ini
@@ -1,5 +1,3 @@
-prefix="pagopa"
-env_short="d"
-env="dev"
-domain="core-itn"
 file_crypted="noedit_secret_enc.json"
+kv_name="pagopa-d-itn-core-kv"
+kv_sops_key_name="pagopa-d-core-itn-sops-key"
