--- a/src/core-itn-secrets/secret/itn-prod/secret.ini
+++ b/src/core-itn-secrets/secret/itn-prod/secret.ini
@@ -1,5 +1,3 @@
-prefix="pagopa"
-env_short="p"
-env="prod"
-domain="core-itn"
 file_crypted="noedit_secret_enc.json"
+kv_name="pagopa-p-itn-core-kv"
+kv_sops_key_name="pagopa-p-core-itn-sops-key"
