--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -13,22 +13,12 @@ jobs:
       - run: |
           rm -rf *
 
-      - name: Checkout Modified Paths
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: |
-            .github
-
-      - run: |
-          ls -la
-          pwd
-
-      - name: Checkout Repository
+      - name: ⏬ Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Get Modified Paths
+      - name: 🔨 Get Modified Paths
         id: get-paths
         run: |
           #
@@ -55,7 +45,7 @@ jobs:
 
         shell: bash
 
-      - name: 👀 See folders downloaded
+      - name: ⏬ Download only changed folders
         id: download
         shell: bash
         run: |
@@ -74,7 +64,7 @@ jobs:
 #          sparse-checkout: |
 #            $(fold -w $(wc -L < "/tmp/paths.txt") < "/tmp/paths.txt")
 
-      - name: See folders downloaded
+      - name: 👀 See folders downloaded
         id: see
         shell: bash
         run: |
