--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -26,7 +26,7 @@ jobs:
           #
           echo "get current branch"
           current_branch=${GITHUB_HEAD_REF}
-
+          echo "current branch: $current_branch"
           echo "get modified paths from source"
           git diff --name-only $current_branch origin/main | grep -v 'domains' | grep '/' | cut -d '/' -f 1,2 | uniq
           echo "executed command"
