added log, removed domain edit

--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -32,6 +32,8 @@ jobs:
           echo "$modified_paths_source"
 
           echo "get modified paths from domains"
+          modified_paths_domains_tmp=$(git diff --name-only $current_branch origin/main | grep 'domains' | grep '/' )
+          echo "$modified_paths_domains_tmp"
           modified_paths_domains=$(git diff --name-only $current_branch origin/main | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq )
           echo "$modified_paths_domains"
 
