--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -28,12 +28,14 @@ jobs:
           current_branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
           echo "current branch: $current_branch"
           echo "get modified paths from source"
+          git diff --name-only $current_branch origin/main | grep -v 'domains'
           modified_paths_source=$(git diff --name-only $current_branch origin/main | grep -v 'domains' | grep '/' | cut -d '/' -f 1,2 | uniq )
           echo "$modified_paths_source"
 
           echo "get modified paths from domains"
           modified_paths_domains_tmp=$(git diff --name-only $current_branch origin/main  | grep "domains" )
           echo "tmp: $modified_paths_domains_tmp"
+          git diff --name-only $current_branch origin/main | grep 'domains'
           modified_paths_domains=$(git diff --name-only $current_branch origin/main | grep 'domains' | grep '/' | cut -d '/' -f 1,2,3 | uniq )
           echo "$modified_paths_domains"
 
