--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -32,7 +32,7 @@ jobs:
           git diff --name-only $current_branch origin/main --output=/tmp/diff.txt
           echo "get modified paths from source"
           source_count=$(grep -vc 'domains' /tmp/diff.txt)
-          if [[ "$source_count" == "0" ]]
+          if [[ "$source_count" == 0 ]]
           then
             modified_paths_source=""
           else
@@ -43,7 +43,7 @@ jobs:
 
           echo "get modified paths from domains"
           domains_count=$(grep -c 'domains' /tmp/diff.txt)
-          if [[ "$domains_count" == "0" ]]
+          if [[ "$domains_count" == 0 ]]
           then
             modified_paths_domains=""
           else
