--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -43,6 +43,7 @@ jobs:
 
           echo "get modified paths from domains"
           domains_count=$(grep -c 'domains' /tmp/diff.txt)
+          echo "domains count: $domains_count"
           if [[ "$domains_count" == 0 ]]
           then
             echo "in domains if true"
