--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -42,10 +42,10 @@ jobs:
             modified_paths_source=$(grep -v 'domains' /tmp/diff.txt | grep '/' | cut -d '/' -f 1,2 | uniq )
           fi
 
-          echo "$modified_paths_source"
+          echo "modified_paths_source: $modified_paths_source"
 
           echo "get modified paths from domains"
-          domains_count=$(grep -c 'domains' /tmp/diff.txt)
+          domains_count=$(grep -c 'domains' /tmp/diff.txt || grep 1)
           echo "domains count: $domains_count"
           if [[ "$domains_count" -eq 0 ]]
           then
@@ -55,7 +55,7 @@ jobs:
             echo "in domains if false"
             modified_paths_domains=$( grep 'domains' /tmp/diff.txt | grep '/' | cut -d '/' -f 1,2,3 | uniq )
           fi
-          echo "$modified_paths_domains"
+          echo "modified_paths_domains: $modified_paths_domains"
 
           echo "merge paths"
           modified_paths="$modified_paths_source $modified_paths_domains .github"
