--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -45,7 +45,7 @@ jobs:
           echo "modified_paths_source: $modified_paths_source"
 
           echo "get modified paths from domains"
-          domains_count=$(grep -c 'domains' /tmp/diff.txt | cat)
+          domains_count=$(grep -c 'domains' /tmp/diff.txt | echo 0)
           echo "domains count: $domains_count"
           if [[ "$domains_count" -eq 0 ]]
           then
