--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -46,7 +46,7 @@ jobs:
           echo "get modified paths from domains"
           domains_count=$(grep -c 'domains' /tmp/diff.txt || echo 0)
           echo "domains count: $domains_count"
-          if [[ "$domains_count" -eq 0 ]]
+          if [[ $domains_count -eq 0 ]]
           then
             echo "in domains if true"
             modified_paths_domains=""
