--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -31,7 +31,8 @@ jobs:
           echo "get git diff"
           git diff --name-only $current_branch origin/main --output=/tmp/diff.txt
           echo "get modified paths from source"
-          source_count=$(grep -vc 'domains' /tmp/diff.txt || echo 0)
+          # i'm using echo because using grep directly fails. it produces an invalid output that breaks the variable assignment
+          source_count=$(echo "$(grep -ov 'domains' /tmp/diff.txt | wc -l )")
           echo "source count: $source_count"
           if [[ $source_count -eq 0 ]]
           then
@@ -45,6 +46,7 @@ jobs:
           echo "modified_paths_source: $modified_paths_source"
 
           echo "get modified paths from domains"
+          # i'm using echo because using grep directly fails. it produces an invalid output that breaks the variable assignment
           domains_count=$(echo "$(grep -o 'domains' /tmp/diff.txt | wc -l )")
           echo "domains count: $domains_count"
           if [ $domains_count -eq 0 ]
