--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -32,7 +32,7 @@ jobs:
           git diff --name-only $current_branch origin/main --output=/tmp/diff.txt
           echo "get modified paths from source"
           # i'm using echo because using grep directly fails. it produces an invalid output that breaks the variable assignment
-          source_count=$(echo "$(grep -ov 'domains' /tmp/diff.txt | wc -l )")
+          source_count=$(echo "$(grep -v 'domains' /tmp/diff.txt | wc -l )")
           echo "source count: $source_count"
           if [[ $source_count -eq 0 ]]
           then
@@ -47,7 +47,7 @@ jobs:
 
           echo "get modified paths from domains"
           # i'm using echo because using grep directly fails. it produces an invalid output that breaks the variable assignment
-          domains_count=$(echo "$(grep -o 'domains' /tmp/diff.txt | wc -l )")
+          domains_count=$(echo "$(grep 'domains' /tmp/diff.txt | wc -l )")
           echo "domains count: $domains_count"
           if [ $domains_count -eq 0 ]
           then
