--- a/src/domains/printit-secrets/secret/itn-dev/secret.ini
+++ b/src/domains/printit-secrets/secret/itn-dev/secret.ini
@@ -1,5 +1,3 @@
-prefix="pagopa"
-env_short="d"
-env="dev"
-domain="printit"
 file_crypted="noedit_secret_enc.json"
+kv_name="pagopa-d-itn-printit-kv"
+kv_sops_key_name="pagopa-d-printit-sops-key"
