--- a/src/domains/printit-secrets/secret/itn-prod/secret.ini
+++ b/src/domains/printit-secrets/secret/itn-prod/secret.ini
@@ -1,5 +1,3 @@
-prefix="pagopa"
-env_short="p"
-env="prod"
-domain="printit"
 file_crypted="noedit_secret_enc.json"
+kv_name="pagopa-p-itn-printit-kv"
+kv_sops_key_name="pagopa-p-printit-sops-key"
