--- a/src/domains/printit-secrets/secret/itn-uat/secret.ini
+++ b/src/domains/printit-secrets/secret/itn-uat/secret.ini
@@ -1,5 +1,3 @@
-prefix="pagopa"
-env_short="u"
-env="uat"
-domain="printit"
 file_crypted="noedit_secret_enc.json"
+kv_name="pagopa-u-itn-printit-kv"
+kv_sops_key_name="pagopa-u-printit-sops-key"
