--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,3 +4,4 @@
 
 /src/domains/selfcare-common @pagopa/infrastructure-admins @pagopa/pagopa-team-core @pagopa/pagopa-team-touchpoint @andrea-putzu
 /src/domains/selfcare-app @pagopa/infrastructure-admins @pagopa/pagopa-team-core @pagopa/pagopa-team-touchpoint @andrea-putzu
+/src/next-core @pagopa/payments-cloud-admin
