--- a/.devops/pay-wallet-code-review-pipelines.yml
+++ b/.devops/pay-wallet-code-review-pipelines.yml
@@ -5,8 +5,8 @@ pr:
       - main
   paths:
     include:
-      - 'src/domains/wallet-app'
-      - 'src/domains/wallet-common'
+      - 'src/domains/pay-wallet-app'
+      - 'src/domains/pay-wallet-common'
     exclude:
       - '**/*.lock.hcl'
       - '**/*.md'
@@ -26,19 +26,19 @@ parameters:
     values:
       - False
       - True
-  # - name: 'PROD'
-  #   displayName: 'Run on PROD environment'
-  #   type: boolean
-  #   default: True
-  #   values:
-  #     - False
-  #     - True
+  - name: 'PROD'
+    displayName: 'Run on PROD environment'
+    type: boolean
+    default: True
+    values:
+      - False
+      - True
 
 variables:
   TIME_OUT: 15
   # working dir
-  WORKING_DIR_APP: 'src/domains/wallet-app'
-  WORKING_DIR_COMMON: 'src/domains/wallet-common'
+  WORKING_DIR_APP: 'src/domains/pay-wallet-app'
+  WORKING_DIR_COMMON: 'src/domains/pay-wallet-common'
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
@@ -92,7 +92,7 @@ stages:
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-dev"
+              TF_ENVIRONMENT_FOLDER: "itn-dev"
               WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
@@ -108,7 +108,7 @@ stages:
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-dev"
+              TF_ENVIRONMENT_FOLDER: "itn-dev"
               WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
@@ -135,7 +135,7 @@ stages:
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-uat"
+              TF_ENVIRONMENT_FOLDER: "itn-uat"
               WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
@@ -151,7 +151,7 @@ stages:
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-uat"
+              TF_ENVIRONMENT_FOLDER: "itn-uat"
               WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
@@ -160,45 +160,45 @@ stages:
               AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.UAT_AKS_AZURE_DEVOPS_SA_CACRT }}
               AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.UAT_AKS_AZURE_DEVOPS_SA_TOKEN }}
 
-  # - stage: PROD
-  #   dependsOn: []
-  #   condition: and(succeeded(), eq(${{parameters.PROD}}, true))
-  #   pool:
-  #     name: "${{variables.poolNameProd}}"
-  #   jobs:
-  #     - job: tfplan_common
-  #       strategy:
-  #         parallel: 1
-  #       timeoutInMinutes: $[variables.TIME_OUT]
-  #       steps:
-  #         - checkout: self
-  #         # 1. Install terraform
-  #         - template: templates/terraform-setup/template.yaml@terraform
-  #         - template: templates/terraform-summarize/template.yaml@terraform
-  #         # 2. Run terraform plan core
-  #         - template: templates/terraform-plan/template.yaml@terraform
-  #           parameters:
-  #             TF_ENVIRONMENT_FOLDER: "weu-prod"
-  #             WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
-  #             AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
-  #             TF_SUMMARIZE: true
-  #     - job: tfplan_app
-  #       strategy:
-  #         parallel: 1
-  #       timeoutInMinutes: $[variables.TIME_OUT]
-  #       steps:
-  #         - checkout: self
-  #         # 1. Install terraform
-  #         - template: templates/terraform-setup/template.yaml@terraform
-  #         - template: templates/terraform-summarize/template.yaml@terraform
-  #         # 2. Run terraform plan core
-  #         - template: templates/terraform-plan/template.yaml@terraform
-  #           parameters:
-  #             TF_ENVIRONMENT_FOLDER: "weu-prod"
-  #             WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
-  #             AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
-  #             TF_SUMMARIZE: true
-  #             AKS_NAME: ${{ variables.AKS_PROD_NAME }}
-  #             AKS_API_SERVER_URL: ${{ variables.PROD_AKS_APISERVER_URL }}
-  #             AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_CACRT }}
-  #             AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_TOKEN }}
+  - stage: PROD
+    dependsOn: []
+    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
+    pool:
+      name: "${{variables.poolNameProd}}"
+    jobs:
+      - job: tfplan_common
+        strategy:
+          parallel: 1
+        timeoutInMinutes: $[variables.TIME_OUT]
+        steps:
+          - checkout: self
+          # 1. Install terraform
+          - template: templates/terraform-setup/template.yaml@terraform
+          - template: templates/terraform-summarize/template.yaml@terraform
+          # 2. Run terraform plan core
+          - template: templates/terraform-plan/template.yaml@terraform
+            parameters:
+              TF_ENVIRONMENT_FOLDER: "itn-prod"
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
+              TF_SUMMARIZE: true
+      - job: tfplan_app
+        strategy:
+          parallel: 1
+        timeoutInMinutes: $[variables.TIME_OUT]
+        steps:
+          - checkout: self
+          # 1. Install terraform
+          - template: templates/terraform-setup/template.yaml@terraform
+          - template: templates/terraform-summarize/template.yaml@terraform
+          # 2. Run terraform plan core
+          - template: templates/terraform-plan/template.yaml@terraform
+            parameters:
+              TF_ENVIRONMENT_FOLDER: "itn-prod"
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
+              TF_SUMMARIZE: true
+              AKS_NAME: ${{ variables.AKS_PROD_NAME }}
+              AKS_API_SERVER_URL: ${{ variables.PROD_AKS_APISERVER_URL }}
+              AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_CACRT }}
+              AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_TOKEN }}
